--- a/lakefile.toml
+++ b/lakefile.toml
@@ -5,6 +5,10 @@ defaultTargets = ["Linglib"]
 [leanOptions]
 autoImplicit = false
 
+[[require]]
+name = "mathlib"
+scope = "leanprover-community"
+
 [[lean_lib]]
 name = "Linglib"
 globs = ["Linglib.+"]
