--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,17 +26,17 @@ jobs:
           curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y --default-toolchain none
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
 
+      - name: Install toolchain
+        run: elan install $(cat lean-toolchain)
+
       - name: Get Mathlib cache
         run: lake exe cache get
 
       - name: Build project
         run: lake build
 
-      - name: Fetch doc-gen4 (dev mode)
-        run: MATHLIB_NO_CACHE_ON_UPDATE=1 lake -Kenv=dev update doc-gen4
-
       - name: Build documentation
-        run: lake -Kenv=dev build Linglib:docs
+        run: lake build Linglib:docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
