--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,11 @@ jobs:
           curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y --default-toolchain none
           echo "$HOME/.elan/bin" >> $GITHUB_PATH
 
-      - name: Install toolchain
-        run: elan install $(cat lean-toolchain)
+      - name: Install and activate toolchain
+        run: |
+          elan toolchain install $(cat lean-toolchain)
+          elan override set $(cat lean-toolchain)
+          lake --version
 
       - name: Get Mathlib cache
         run: lake exe cache get
