Revise Warstadt 2022 formalization, add projection helpers, fix doc-gen4 CI (0.219.1)

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -56,7 +56,7 @@ jobs:
           lake build doc-gen4
 
           BUILD=.lake/build
-          DOCGEN="$BUILD/bin/doc-gen4"
+          DOCGEN="lake exe doc-gen4"
           REPO_URL="https://github.com/${{ github.repository }}"
           COMMIT="${{ github.sha }}"
           SRC_URI="$REPO_URL/blob/$COMMIT"
